--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
+	android:id="@+id/linearLayout"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:background="@drawable/xbgtile"
+	android:orientation="vertical"
 >
-	<Button
-		android:id="@+id/button1"
-		android:text="@string/button_start_inventory"
-		android:height="20sp"
+	<!-- <Button android:id="@+id/start_button" android:layout_width="match_parent" 
+		android:layout_height="wrap_content" android:text="Start Inventory" android:layout_marginLeft="5dip" 
+		android:layout_marginRight="5dip" android:layout_marginTop="5dip" android:layout_marginBottom="5dip" 
+		android:padding="5dip" 
+		></Button> -->
+		
+		
+	<ScrollView
+		android:scrollbarStyle="insideOverlay"
+		android:scrollbars="vertical|horizontal"
+		android:fadingEdge="vertical"
+		android:fadingEdgeLength="30dip"
+		android:background="#77330000"
+		android:layout_marginLeft="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginBottom="5dip"
+
+		android:layout_marginTop="5dip"
+
+		android:paddingLeft="2dip"
+		android:paddingRight="2dip"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="fill"
-	></Button>
-	<Button
-		android:id="@+id/button_connect"
-		android:text="@string/button_connect_agent"
-		android:height="20sp"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="fill"
-		android:visibility="invisible"
-	></Button>
-	<Button
-		android:id="@+id/button_disconnect"
-		android:text="@string/button_disconnect_agent"
-		android:height="20sp"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="fill"
-		android:visibility="invisible"
-	></Button>
-	<TextView
-		android:text=""
-		android:id="@+id/text_result"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:background="@color/result_background"
-	></TextView>
+		android:layout_height="match_parent"
+	>
+		<TextView
+			android:id="@+id/log_text"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:text=""
+			android:textColor="#ffffff" />
+	</ScrollView>
+
 </LinearLayout>
+
+
+
+
+
