--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="result_background">#77007733</color>
-    <color name="title">#770000</color>
+	<color
+		name="result_background"
+	>#77007733</color>
+	<color
+		name="title"
+	>#770000</color>
 </resources>
