--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -2,17 +2,30 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
 >
+
+  <PreferenceCategory
+    android:title="Agent Infos"
+  >
+  <Preference
+       android:key="device_id"
+       android:title="Device ID"
+       android:summary=""
+       android:selectable="false"
+       android:enabled="true"
+      />
+  </PreferenceCategory>
 	<PreferenceCategory
 		android:title="Agent Settings"
 	>
 		<CheckBoxPreference
 			android:title="Phone Boot"
 			android:key="boot"
-			android:summaryOn="Agent is automatically launched at phone boot" 
+			android:summaryOn="Agent is automatically launched at phone boot"
 			android:summaryOff="Agent must be launched manually"
 			android:persistent="true"
-			android:defaultValue="false"
-			/>
+			android:defaultValue="false" />
+			
+			
 	</PreferenceCategory>
 	<PreferenceCategory
 		android:title="Server Settings"
@@ -22,8 +35,7 @@
 			android:title="Inventory Server"
 			android:key="url"
 			android:defaultValue="http://"
-			android:persistent="true"
-			/>
+			android:persistent="true" />
 
 	</PreferenceCategory>
 </PreferenceScreen>
