--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,12 +7,6 @@
 	android:background="@drawable/xbgtile"
 	android:orientation="vertical"
 >
-	<!-- <Button android:id="@+id/start_button" android:layout_width="match_parent"
-		android:layout_height="wrap_content" android:text="Start Inventory" android:layout_marginLeft="5dip"
-		android:layout_marginRight="5dip" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"
-		android:padding="5dip"
-		></Button> -->
-
 
 	<ScrollView
 		android:scrollbarStyle="insideOverlay"
@@ -25,20 +19,44 @@
 		android:layout_marginBottom="5dip"
 
 		android:layout_marginTop="5dip"
-
+    android:layout_weight="1"
+    
 		android:paddingLeft="2dip"
 		android:paddingRight="2dip"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+	 android:layout_height="0dip"
 	>
 		<TextView
 			android:id="@+id/log_text"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			
 			android:text=""
 			android:textColor="#ffffff" />
+		
 	</ScrollView>
 
+  <ScrollView
+    android:scrollbarStyle="insideOverlay"
+    android:scrollbars="vertical|horizontal"
+    android:fadingEdge="vertical"
+    android:fadingEdgeLength="30dip"
+    android:background="#77330000"
+    android:layout_marginLeft="5dip"
+    android:layout_marginRight="5dip"
+    android:layout_marginBottom="5dip"
+
+    android:layout_marginTop="5dip"
+
+    android:paddingLeft="2dip"
+    android:paddingRight="2dip"
+    android:layout_width="match_parent"
+    android:layout_height="0dip"
+    android:layout_weight="1"    
+  >
+  <WebView android:id="@+id/web_text" android:layout_width="match_parent" android:layout_height="match_parent"></WebView>
+  </ScrollView>
+  
 </LinearLayout>
 
 
