change name in others files

--- a/src/main/res/values-fr/strings_pref_accueil.xml
+++ b/src/main/res/values-fr/strings_pref_accueil.xml
@@ -3,7 +3,7 @@
 
 <!-- Accueil Preferences -->
 
-	<string name="AccueilTitle">Paramètres de l\'agent Fusioninventory</string>
+	<string name="AccueilTitle">Paramètres de l\'agent Inventory</string>
 
 	<!-- Inventory part -->
 
