--- a/src/main/res/values/strings_pref_accueil.xml
+++ b/src/main/res/values/strings_pref_accueil.xml
@@ -3,7 +3,7 @@
 
 <!-- Accueil Preferences -->
 
-	<string name="AccueilTitle">Fusioninventory Agent Settings</string>
+	<string name="AccueilTitle">Inventory Agent Settings</string>
 
 	<!-- Inventory part -->
 
