--- a/src/main/res/values-es/strings_pref_accueil.xml
+++ b/src/main/res/values-es/strings_pref_accueil.xml
@@ -3,37 +3,37 @@
 
 <!-- Accueil Preferences -->
 
-	<string name="AccueilTitle">Inventory Agent Settings</string>
+	<string name="AccueilTitle">Configuración de la aplicación</string>
 
 	<!-- Inventory part -->
 
-		<string name="AccueilInventoryTitle">Inventory</string>
-		<string name="AccueilInventorySummaryOn">Click to disable inventory</string>
-		<string name="AccueilInventorySummaryOff">Click to enable inventory</string>
-		<string name="AccueilInventoryRun">Run inventory now</string>
-		<string name="AccueilInventoryRunSummary">Run now</string>
-		<string name="AccueilInventoryParam">Inventory parameters</string>
-		<string name="AccueilInventoryParamSummary">Inventory frequencies</string>
+		<string name="AccueilInventoryTitle">Inventario</string>
+		<string name="AccueilInventorySummaryOn">Click para desactivar el inventario</string>
+		<string name="AccueilInventorySummaryOff">Click para activar el inventario</string>
+		<string name="AccueilInventoryRun">Correr el inventario ahora!</string>
+		<string name="AccueilInventoryRunSummary">Correr ahora!</string>
+		<string name="AccueilInventoryParam">Parametros del inventario</string>
+		<string name="AccueilInventoryParamSummary">Frecuencia del inventario</string>
 
 	<!-- Remote view part -->
 
-		<string name="AccueilRemoteTitle">Remote view</string>
-		<string name="AccueilRemoteSummaryOn">Click to disable remote view</string>
-		<string name="AccueilRemoteSummaryOff">Click to enable remote view</string>
-		<string name="AccueilRemoteParam">Parameters remote view</string>
-		<string name="AccueilRemoteParamSummary">Setup remote view settings</string>
+		<string name="AccueilRemoteTitle">Vista remota</string>
+		<string name="AccueilRemoteSummaryOn">Click para desactivar la vista remota</string>
+		<string name="AccueilRemoteSummaryOff">Click para activar la vista remota</string>
+		<string name="AccueilRemoteParam">Parametros de la vista remota</string>
+		<string name="AccueilRemoteParamSummary">Configurar la vista remota</string>
 
 	<!-- SSH part -->
 
 		<string name="AccueilSshTitle">Secure Shell</string>
-		<string name="AccueilSshSummaryOn">Click to disable SSH</string>
-		<string name="AccueilSshSummaryOff">Click to enable SSH</string>
+		<string name="AccueilSshSummaryOn">Click para desactivar SSH</string>
+		<string name="AccueilSshSummaryOff">Click para activar SSH</string>
 
 	<!-- global part -->
 
 		<string name="AccueilGlobalTitle">Global</string>
-		<string name="AccueilGlobalParam">Global settings</string>
-		<string name="AccueilGlobalParamSummary">Setup certificates, server ...</string>
+		<string name="AccueilGlobalParam">Configuración Global</string>
+		<string name="AccueilGlobalParamSummary">Configurar certificados, servidores ...</string>
 
 
 
