--- a/src/main/res/values-es/strings_pref_global.xml
+++ b/src/main/res/values-es/strings_pref_global.xml
@@ -5,26 +5,26 @@
 
 	<string name="GlobalCat">Global</string>
 
-	<string name="GlobalBoot">Boot options</string>
-	<string name="GlobalBootSummaryOn">Click to disable automatic boot</string>
-	<string name="GlobalBootSummaryOff">Click to enable automatic boot</string>
+	<string name="GlobalBoot">Opciones de reinicio</string>
+	<string name="GlobalBootSummaryOn">Click para desactivar el reinicio automatico</string>
+	<string name="GlobalBootSummaryOff">Click para activar el reinicio automatico</string>
 
-	<string name="GlobalNotif">Notifications</string>
-	<string name="GlobalNotifSummaryOn">Click to disable notifications</string>
-	<string name="GlobalNotifSummaryOff">Click to enable notifications</string>
+	<string name="GlobalNotif">Notificaciones</string>
+	<string name="GlobalNotifSummaryOn">Click para desactivar las notificaciones</string>
+	<string name="GlobalNotifSummaryOff">Click para activar las notificaciones</string>
 
-	<string name="GlobalCatSet">Server settings</string>
+	<string name="GlobalCatSet">Configuracion del servidor</string>
 
-	<string name="GlobalServer">Server address</string>
-	<string name="GlobalServerSummary">Define server address</string>
+	<string name="GlobalServer">Dirección del Servidor</string>
+	<string name="GlobalServerSummary">Define la dirección del servidor</string>
 
-	<string name="GlobalService">Authentication</string>
-	<string name="GlobalServiceSummary">Setup password, public keys ...</string>
+	<string name="GlobalService">Autenticación</string>
+	<string name="GlobalServiceSummary">Configura contraseñas, llaves públicas ...</string>
 
-	<string name="GlobalCatAdvanced">Advanced settings</string>
+	<string name="GlobalCatAdvanced">Configuración Advanzada</string>
 
-	<string name="GlobalAdvanced">Advanced Settings</string>
-	<string name="GlobalAdvancedSummary">Setup daemon settings, path to binaries ...</string>
+	<string name="GlobalAdvanced">Configuración avanzada</string>
+	<string name="GlobalAdvancedSummary">Configurar daemon settings, dirección de binarios ...</string>
 
 </resources>
 
