--- a/src/main/res/values-es/strings_pref_inventory.xml
+++ b/src/main/res/values-es/strings_pref_inventory.xml
@@ -3,15 +3,15 @@
 
 <!-- Inventory Preferences -->
 
-	<string name="InventoryCat">Inventory</string>
+	<string name="InventoryCat">Inventario</string>
 
-	<string name="InventoryAuto">Automatic inventory</string>
-	<string name="InventoryAutoSummaryOn">Click to disable automatic inventory</string>
-	<string name="InventoryAutoSummaryOff">Click to enable automatic inventory</string>
+	<string name="InventoryAuto">Inventario automatico</string>
+	<string name="InventoryAutoSummaryOn">Click para desactivar el inventario automatico</string>
+	<string name="InventoryAutoSummaryOff">Click para activar el inventario automatico</string>
 
-	<string name="InventoryFrequency">Frequency</string>
-	<string name="InventoryFrequencyDialog">Every :</string>
-	<string name="InventoryFrequencySummary">Define frequency</string>
+	<string name="InventoryFrequency">Frecuencia</string>
+	<string name="InventoryFrequencyDialog">Cada :</string>
+	<string name="InventoryFrequencySummary">Define la frecuencia</string>
 
 </resources>
 
