--- a/src/main/res/values-es/value_time.xml
+++ b/src/main/res/values-es/value_time.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<resources>
 		 <string-array name="Time">
-		         <item>jour</item>
-		         <item>semaine</item>
-		         <item>mois</item>
+		         <item>día</item>
+		         <item>semana</item>
+		         <item>mes</item>
 		 </string-array>
 		 <string-array name="TimeValue">
-		         <item>jour</item>
-		         <item>semaine</item>
-		         <item>mois</item>
+		         <item>Día</item>
+		         <item>Semana</item>
+		         <item>Mes</item>
 		 </string-array>
 	</resources>
 
