--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,3 +1,9 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Holo.Light"/>
+
+    <style name="NoActionBar" parent="android:Theme.Holo.Light">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
