add teclib logo to splash

--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -16,4 +16,14 @@
         android:layout_centerVertical="true"
         />
 
+    <ImageView
+        android:id="@+id/imgLogoTeclib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logoteclib"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:layout_centerHorizontal="true"
+        />
+
 </RelativeLayout>
