--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,10 +35,10 @@
                             <a class="color-type-secondary" href="{{ '/news' | relative_url }}">News</a>
                         </li>
 
-                        <li>
+                        <li class="hidden">
                             <a class="color-type-secondary" href="{{ '/screenshots' | relative_url }}">Screenshots</a>
                         </li>
-                        
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Documentation <i class="glyph glyph-chevron-down-2"></i></a>
                             <ul class="dropdown-menu" role="menu">
@@ -48,7 +48,7 @@
                                 <li><a href="{{ 'androidTests/' | relative_url }}">Test Report</a></li>
                             </ul>
                         </li>
-                        
+
                         {% if site.github.wiki_url %}
                             <li>
                                 <a class="color-type-secondary" href="{{ site.github.wiki_url }}">Wiki</a>
