ci(travis): change ci to travis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
           <i class="glyph glyph-up"></i>
           <span class="sr-only">Back to top</span>
       </a>
-      <img src="{{ 'images/logo2.png' | relative_url }}" class="logo hide">
+      <img src="{{ 'images/logo2.png' | relative_url }}" class="logo hide" alt="">
 
       {% include footer.html %}   
 
