ci(htmlproofer): change parameters and ignore conflicting files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -87,7 +87,7 @@
         </div>
 </header>
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalTitle" aria-hidden="true">
+<div data-proofer-ignore class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
