refactor(url): update default value url to fusion inventory

--- a/app/src/main/res/xml/accueil.xml
+++ b/app/src/main/res/xml/accueil.xml
@@ -75,6 +75,7 @@
         <EditTextPreference
             android:title="@string/GlobalServer"
             android:key="url"
+            android:defaultValue="https://dev.flyve.org/glpi/plugins/fusioninventory/"
             android:summary="@string/GlobalServerSummary"
             android:persistent="true"
             />
