refactor(about): add space and replace some words on text

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -26,12 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="About"
-        android:gravity="left"
+        android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textSize="12sp"
+        android:lineSpacingExtra="6dp"
         />
 
 </RelativeLayout>
