test(*): remove fragment test

--- a/app/src/main/res/values-es/strings_pref_accueil.xml
+++ b/app/src/main/res/values-es/strings_pref_accueil.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-<!-- Accueil Preferences -->
+<!-- FragmentAccueil Preferences -->
 
 	<string name="AccueilTitle">Configuración de la aplicación</string>
 
