--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color
-		name="result_background"
-	>#77007733</color>
-	<color
-		name="title"
-	>#770000</color>
+	<color name="colorPrimary">#767677</color>
+	<color name="colorPrimaryDark">#4C4C4C</color>
+	<color name="colorAccent">#13988A</color>
+	<color name="black">#000000</color>
+	<color name="red">#EA1E31</color>
+	<color name="white">#FFF</color>
+	<color name="gray">#EFF0F1</color>
+	<color name="grayLight">#D7D7D7</color>
+	<color name="grayDark">#4C4C4C</color>
+	<color name="blue">#4073B9</color>
+	<color name="snackbar_action">#ffff7663</color>
 </resources>
