--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,10 @@
       {% assign title = name%}
       <meta property="og:type" content="website" />
   {% endif %}
+
+  {% if page.namePage == 'screenshots' %}
+    <link rel="stylesheet" href="{{ "/css/screenshots.css" | absolute_url }}">
+  {% endif %}
   
   <title>{{ title }}</title>
   <meta property="og:title" content="{{ title }}" />
