--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,15 @@
 ---
 ---
-@import '404', 'contact', 'footer', 'general', 'header', 'home', 'post', 'products', 'screenshots';
+@import
+  "404",
+  "contact",
+  "footer",
+  "general",
+  "header",
+  "home",
+  "post",
+  "products"
+;
 
 
 
