refactor(locale): improve labels descriptions

--- a/app/src/main/res/xml/accueil.xml
+++ b/app/src/main/res/xml/accueil.xml
@@ -79,11 +79,34 @@
             android:summary="@string/GlobalServerSummary"
             android:persistent="true"
             />
-        <EditTextPreference android:dialogMessage="@string/tag" android:persistent="true" android:enabled="true" android:selectable="true" android:dialogTitle="@string/tag" android:title="@string/tag" android:key="tag"></EditTextPreference>
+        <EditTextPreference
+            android:dialogMessage="@string/tag"
+            android:persistent="true"
+            android:enabled="true"
+            android:selectable="true"
+            android:dialogTitle="@string/tag"
+            android:summary="@string/tagSummary"
+            android:title="@string/tag"
+            android:key="tag">
+        </EditTextPreference>
 
-        <PreferenceCategory android:title="@string/authentication_credentials">
-            <EditTextPreference android:dialogMessage="@string/login" android:enabled="true" android:persistent="true" android:title="@string/login" android:key="login"></EditTextPreference>
-            <EditTextPreference android:dialogMessage="@string/password" android:persistent="true" android:title="@string/password" android:key="password" android:enabled="true"></EditTextPreference>
+        <PreferenceCategory
+            android:title="@string/authentication_credentials">
+            <EditTextPreference
+                android:dialogMessage="@string/login"
+                android:enabled="true"
+                android:persistent="true"
+                android:title="@string/login"
+                android:key="login">
+            </EditTextPreference>
+
+            <EditTextPreference
+                android:dialogMessage="@string/password"
+                android:persistent="true"
+                android:title="@string/password"
+                android:key="password"
+                android:enabled="true">
+            </EditTextPreference>
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/AccueilPrivacyTitle"/>
