--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,21 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minHeight="?android:attr/actionBarSize"
-		/>
+		>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Inventory Agent Setting"
+				android:textColor="@color/black"
+				android:textSize="18sp"
+				/>
+		</RelativeLayout>
+
+	</android.support.v7.widget.Toolbar>
 
 	<FrameLayout
 		android:id="@+id/fragment_container"
