--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
 	<color name="grayLight">#D7D7D7</color>
 	<color name="grayDark">#4C4C4C</color>
 	<color name="blue">#4073B9</color>
-	<color name="snackbar_action">#ffff7663</color>
+	<color name="snackbar_action_fail">#ffff7663</color>
+	<color name="snackbar_action_good">#13988A</color>
 </resources>
