--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -15,7 +15,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lst"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        >
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
