refactor(show): add design

--- a/app/src/main/res/layout/list_item_inventory_header.xml
+++ b/app/src/main/res/layout/list_item_inventory_header.xml
@@ -14,6 +14,7 @@
         android:layout_margin="10dp"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:textColor="@color/colorAccent"
         />
 
 </RelativeLayout>
