--- a/app/src/main/res/layout/list_item_inventory.xml
+++ b/app/src/main/res/layout/list_item_inventory.xml
@@ -6,21 +6,36 @@
     android:layout_margin="5dp"
     >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:layout_margin="10dp"
-        />
-
-    <TextView
-        android:id="@+id/description"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:layout_toRightOf="@+id/title"
-        android:layout_margin="10dp"
-        />
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Title"
+            android:layout_margin="10dp"
+            />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Description"
+            android:layout_margin="10dp"
+            android:textColor="@color/colorAccent"
+            />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/viewSeparator"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        style="@style/LineSeparator"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
