--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,10 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="LineSeparator">
+        <item name="android:background">@drawable/separator_line</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
 </resources>
