--- a/app/src/main/res/layout/list_item_inventory_header.xml
+++ b/app/src/main/res/layout/list_item_inventory_header.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     >
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Header"
-        android:layout_margin="10dp"
         android:textSize="16dp"
         android:textStyle="bold"
         android:textColor="@color/colorAccent"
+        android:background="@color/grayLight"
+        android:padding="10dp"
         />
 
 </RelativeLayout>
