--- a/app/src/main/res/layout/list_item_inventory.xml
+++ b/app/src/main/res/layout/list_item_inventory.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     >
 
     <TextView
@@ -11,9 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp"
+        android:textColor="@color/grayDark"
         />
 
     <TextView
@@ -21,20 +23,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
         android:layout_marginBottom="10dp"
         android:layout_below="@+id/title"
-        android:textColor="@color/colorAccent"
+        android:fontFamily="sans-serif"
+        android:textSize="16sp"
+        android:textColor="@color/gray"
         />
 
 
     <View
         android:id="@+id/viewSeparator"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/description"
         style="@style/LineSeparator"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="13dp"
         />
 </RelativeLayout>
