--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
 	<color name="black">#000000</color>
 	<color name="red">#EA1E31</color>
 	<color name="white">#FFF</color>
-	<color name="gray">#EFF0F1</color>
-	<color name="grayLight">#D7D7D7</color>
+	<color name="gray">#7E7E7E</color>
+	<color name="grayLight">#CCCCCC</color>
 	<color name="grayDark">#4C4C4C</color>
 	<color name="blue">#4073B9</color>
 	<color name="snackbar_action_fail">#ffff7663</color>
