--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
                         </li>
 
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Documentation <i class="glyph glyph-chevron-down-2"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Development <i class="glyph glyph-chevron-down-2"></i></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ 'reports/javadoc/' | absolute_url }}">Code documentation</a></li>
                                 <li class="divider"></li>
@@ -47,7 +47,7 @@
                         </li>
 
                         <li>
-                            <a class="color-type-secondary" href="{{ '/wiki' | absolute_url }}">Wiki</a>
+                            <a class="color-type-secondary" href="{{ '/howtos' | absolute_url }}">How-tos</a>
                         </li>
 
                         <li>
