--- a/_sass/_404.scss
+++ b/_sass/_404.scss
@@ -1,3 +1,5 @@
+$light: #eee;
+
 .page-not-found {
   text-align: center;
 
@@ -6,7 +8,7 @@
   }
 
   p {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid $light;
     display: inline-block;
     padding-bottom: 20px;
   }
