--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.DrawerLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/linearLayout"
-	android:layout_width="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_width="match_parent"
+	android:id="@+id/drawerLayout"
+	>
 
-	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:minHeight="?android:attr/actionBarSize"
-		>
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-
-			<TextView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/AccueilTitle"
-				android:textColor="@color/black"
-				android:textSize="18sp"
-				/>
-		</RelativeLayout>
-
-	</android.support.v7.widget.Toolbar>
-
-	<FrameLayout
-		android:id="@+id/fragment_container"
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		/>
-</LinearLayout>
+		android:orientation="vertical"
+		>
 
+		<android.support.v7.widget.Toolbar
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/toolbar"
+			android:background="@color/colorPrimary"
+			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+			<RelativeLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				>
 
+				<TextView
+					android:id="@+id/txtToolbarTitle"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/app_name"
+					android:layout_centerVertical="true"
+					style="@style/titleText"
+					android:textColor="@color/white"
+					/>
 
+			</RelativeLayout>
 
+		</android.support.v7.widget.Toolbar>
+
+		<FrameLayout
+			android:orientation="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:id="@+id/containerView">
+		</FrameLayout>
+
+	</LinearLayout>
+
+	<android.support.design.widget.NavigationView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		app:itemTextColor="#FFFFFF"
+		android:layout_gravity="start"
+		android:fitsSystemWindows="true"
+		>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="vertical"
+			>
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:src="@drawable/header_menu"
+				android:scaleType="centerCrop"
+				android:adjustViewBounds="true"
+				/>
+
+			<ListView
+				android:id="@+id/lstNV"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:dividerHeight="0dp"
+				android:layout_marginTop="24dp"
+				android:divider="@null"
+				/>
+		</LinearLayout>
+	</android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
