refactor(home): add header accent color
Signed-off-by: Rafa Hernandez <rhernandez@teclib.com>

--- a/app/src/main/res/layout/list_item_home_header.xml
+++ b/app/src/main/res/layout/list_item_home_header.xml
@@ -10,6 +10,7 @@
 		android:id="@+id/txtTitle"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:textColor="@color/colorAccent"
 		style="@style/titleText" />
 
 </LinearLayout>
