--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,25 +18,8 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/toolbar"
-			android:background="@color/colorPrimary"
+			android:background="@color/colorAccent"
 			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-			<RelativeLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				>
-
-				<TextView
-					android:id="@+id/txtToolbarTitle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="@string/app_name"
-					android:layout_centerVertical="true"
-					style="@style/titleText"
-					android:textColor="@color/white"
-					/>
-
-			</RelativeLayout>
 
 		</android.support.v7.widget.Toolbar>
 
