refactor(main): implement MVC pattern
Signed-off-by: Rafa Hernandez <rhernandez@teclib.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
 				/>
 
 			<ListView
-				android:id="@+id/lstNV"
+				android:id="@+id/lst"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:dividerHeight="0dp"
