feat(inventory): remove header in specific tab
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/res/layout/activity_inventory_new.xml
+++ b/app/src/main/res/layout/activity_inventory_new.xml
@@ -41,8 +41,8 @@
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/blue"
         app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/white"
-        app:tabTextColor="@color/snackbar_action_good" />
+        app:tabTextColor="@color/white"
+        app:tabSelectedTextColor="@color/white"/>
 
     <ProgressBar
         android:id="@+id/pb"
