--- a/app/src/main/res/layout/list_item_inventory_child.xml
+++ b/app/src/main/res/layout/list_item_inventory_child.xml
@@ -1,44 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:layout_marginEnd="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-medium"
-        android:textSize="16sp"
+        android:text=""
         android:textColor="@color/grayDark"
-        />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:layout_below="@+id/title"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="3dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/title"
         android:fontFamily="sans-serif"
-        android:textSize="16sp"
+        android:text=""
         android:textColor="@color/gray"
-        />
-
+        android:textSize="16sp" />
 
     <View
         android:id="@+id/viewSeparator"
-        android:layout_below="@+id/description"
         style="@style/LineSeparator"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"
-        />
+        android:layout_below="@+id/description" />
 </RelativeLayout>
